working on left and right